; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/drivers_display/extr_menu_display_d3d8.c_menu_display_d3d8_font_init_first.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/drivers_display/extr_menu_display_d3d8.c_menu_display_d3d8_font_init_first.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FONT_DRIVER_RENDER_D3D8_API = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, i8*, i8*, float, i32)* @menu_display_d3d8_font_init_first to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @menu_display_d3d8_font_init_first(i8** %0, i8* %1, i8* %2, float %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8**, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca float, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32**, align 8
  store i8** %0, i8*** %7, align 8
  store i8* %1, i8** %8, align 8
  store i8* %2, i8** %9, align 8
  store float %3, float* %10, align 4
  store i32 %4, i32* %11, align 4
  %13 = load i8**, i8*** %7, align 8
  %14 = bitcast i8** %13 to i32**
  store i32** %14, i32*** %12, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = load i8*, i8** %9, align 8
  %17 = load float, float* %10, align 4
  %18 = load i32, i32* %11, align 4
  %19 = load i32, i32* @FONT_DRIVER_RENDER_D3D8_API, align 4
  %20 = call i32* @font_driver_init_first(i8* %15, i8* %16, float %17, i32 1, i32 %18, i32 %19)
  %21 = load i32**, i32*** %12, align 8
  store i32* %20, i32** %21, align 8
  %22 = icmp ne i32* %20, null
  br i1 %22, label %24, label %23

23:                                               ; preds = %5
  store i32 0, i32* %6, align 4
  br label %25

24:                                               ; preds = %5
  store i32 1, i32* %6, align 4
  br label %25

25:                                               ; preds = %24, %23
  %26 = load i32, i32* %6, align 4
  ret i32 %26
}

declare dso_local i32* @font_driver_init_first(i8*, i8*, float, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
